--- a/tutorial1.html
+++ b/tutorial1.html
@@ -64,7 +64,9 @@
             </h1>
             <div id="loaded">
             </div>
-            <div id="size_color">
+            <div id="option_color">
+            </div>
+            <div id="option_width">
             </div>
             <div id="delete" class="button">
               Delete Node
