drop and shhrink

--- a/tutorial1.html
+++ b/tutorial1.html
@@ -8,6 +8,9 @@
     <script src="../../narabazi/lib/jquery-1.8.0.min.js">
 
     </script>
+    <script src="jquery-ui-1.8.23.custom.min.js">
+    </script>
+
     <script src="boxModule.js">
 
     </script>
@@ -70,6 +73,12 @@
             </div>
             <div id="delete" class="button">
               Delete Node
+            </div>
+            <div id="drop" class="button">
+              Drop
+            </div>
+            <div id="shrink" class="button">
+              Shrink
             </div>
           </div>
           <!--/.well -->
